--- a/style/main.css
+++ b/style/main.css
@@ -243,5 +243,9 @@ body {
     margin-top: 1rem;
     font-size: 25px;
   }
+  .errorMsg {
+    font-size: 11px;
+    left: 5px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
